fix card width on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,8 +9,13 @@ body {
     width: 100%;
 }
 
+.cards-container {
+    width: 100%;
+    position: relative;
+}
+
 @media only screen and (max-width: 600px) {
-    .card { max-width: 100% }
+    .card { width: 100% }
     .results { margin-top: 8em }
     footer .container-footer img { display: none }
     footer .container-footer { width: inherit }
@@ -108,6 +113,7 @@ header .search-area .note {
     margin: 0 auto;
     margin-top: 5em;
     max-width: 60%;
+    position: relative;
     /* margin-top: 5em;
     left: 50%;
     transform: translate(-50%);
